--- a/CopyOracleDatabaseToPostgresql/MainWindow.xaml
+++ b/CopyOracleDatabaseToPostgresql/MainWindow.xaml
@@ -1,18 +1,19 @@
 ﻿<Window x:Class="CopyOracleDatabaseToPostgresql.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-  <Grid>
+        Title="MainWindow" Height="1024" Width="1024">
+  <Grid Margin="10">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
       <ColumnDefinition Width="*" />
     </Grid.ColumnDefinitions>
-    <StackPanel Grid.Column="0">
+    <StackPanel Grid.Column="0" Margin="10">
       <CheckBox Content="Create Role" />
       <CheckBox Content="Create Schemas" />
       <CheckBox Content="Create tables" />
       <CheckBox Content="Fill tables" />
     </StackPanel>
-    <TextBox Grid.Column="1" Width="200" Height="300" AcceptsReturn="True" TextWrapping="Wrap" />
+    <Button Grid.Column="0" Grid.ColumnSpan="2" Content="Start" Width="100" Height="30" Margin="10" HorizontalAlignment="Center" Padding="10,10,10,10" />
+    <TextBox Grid.Column="1" Width="200" Height="300" AcceptsReturn="True" TextWrapping="Wrap" Padding="10,10,10,10" />
   </Grid>
 </Window>
