--- a/CopyOracleDatabaseToPostgresql/MainWindow.xaml
+++ b/CopyOracleDatabaseToPostgresql/MainWindow.xaml
@@ -6,6 +6,7 @@
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
       <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="*" />
     </Grid.ColumnDefinitions>
     <StackPanel Grid.Column="0" Margin="10">
       <CheckBox Content="Create Role" />
@@ -13,7 +14,7 @@
       <CheckBox Content="Create tables" />
       <CheckBox Content="Fill tables" />
     </StackPanel>
-    <Button Grid.Column="0" Grid.ColumnSpan="2" Content="Start" Width="100" Height="30" Margin="10" HorizontalAlignment="Center" Padding="10,10,10,10" />
-    <TextBox Grid.Column="1" Width="200" Height="300" AcceptsReturn="True" TextWrapping="Wrap" Padding="10,10,10,10" />
+    <Button Grid.Column="1" Content="Start" Width="100" Height="30" HorizontalAlignment="Center" Padding="0,0,0,0" />
+    <TextBox Grid.Column="2" Height="300" AcceptsReturn="True" TextWrapping="Wrap" HorizontalAlignment="Stretch" />
   </Grid>
 </Window>
