--- a/CopyOracleDatabaseToPostgresql/MainWindow.xaml
+++ b/CopyOracleDatabaseToPostgresql/MainWindow.xaml
@@ -10,10 +10,10 @@
     </Grid.ColumnDefinitions>
     <Border BorderBrush="Black" BorderThickness="2" Margin="5">
       <StackPanel Name="ListOfActions" Margin="10">
-        <CheckBox Content="Create Role" />
-        <CheckBox Content="Create Schemas" />
-        <CheckBox Content="Create tables" />
-        <CheckBox Content="Fill tables" />
+        <CheckBox Name="CreateRole" Content="Create Role" />
+        <CheckBox Name="CreateSchemas" Content="Create Schemas" />
+        <CheckBox Name="CreateTables" Content="Create tables" />
+        <CheckBox Name="FillTables" Content="Fill tables" />
       </StackPanel>
     </Border>
     <Button Name="StartProcessing" Click="StartButton_Click" Grid.Column="1" Content="Start" Width="100" Height="30" HorizontalAlignment="Center" Padding="0,0,0,0" />
