--- a/CopyOracleDatabaseToPostgresql/MainWindow.xaml
+++ b/CopyOracleDatabaseToPostgresql/MainWindow.xaml
@@ -18,6 +18,8 @@
     </Border>
     <CheckBox Name="Schema1" Content="Schema1" Grid.Column="1" Margin="5,10,5,5" />
     <CheckBox Name="Schema2" Content="Schema2" Grid.Column="1" Margin="5,30,5,5" />
+    <CheckBox Name="Schema3" Content="Schema3" Grid.Column="1" Margin="5,50,5,5" />
+    <CheckBox Name="Schema4" Content="Schema4" Grid.Column="1" Margin="5,70,5,5" />
     <Button Name="StartProcessing" Click="StartButton_Click" Grid.Column="1" Content="Start" Width="100" Height="30" HorizontalAlignment="Center" Padding="0,0,0,0" />
     <Border Grid.Column="2" BorderBrush="Black" BorderThickness="2" Padding="2" Margin="2" >
       <TextBox Name="TextResult" Grid.Column="2" Height="Auto" AcceptsReturn="True" TextWrapping="Wrap" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch"/>
