--- a/CopyOracleDatabaseToPostgresql/MainWindow.xaml
+++ b/CopyOracleDatabaseToPostgresql/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="CopyOracleDatabaseToPostgresql.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="1024" Width="1024">
+        Title="Copy Oracle database to PostgreSQL" Height="1024" Width="1024">
   <Grid Margin="10">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
@@ -10,19 +10,25 @@
     </Grid.ColumnDefinitions>
     <Border BorderBrush="Black" BorderThickness="2" Margin="5">
       <StackPanel Name="ListOfActions" Margin="10">
-        <CheckBox Name="CreateRole" Content="Create Role" />
+        <CheckBox Name="CreateRole" Content="Create Roles" />
         <CheckBox Name="CreateSchemas" Content="Create Schemas" />
-        <CheckBox Name="CreateTables" Content="Create tables" />
-        <CheckBox Name="FillTables" Content="Fill tables" />
+        <CheckBox Name="CreateTablesSchema1" Content="Create tables for schema1" />
+        <CheckBox Name="CreateTablesSchema2" Content="Create tables for schema2" />
+        <CheckBox Name="CreateTablesSchema3" Content="Create tables for schema3" />
+        <CheckBox Name="CreateTablesSchema4" Content="Create tables for schema4" />
+        <CheckBox Name="FillTablesSchema1" Content="Fill tables" />
+        <CheckBox Name="FillTablesSchema2" Content="Fill tables" />
+        <CheckBox Name="FillTablesSchema3" Content="Fill tables" />
+        <CheckBox Name="FillTablesSchema4" Content="Fill tables" />
       </StackPanel>
     </Border>
-    <CheckBox Name="Schema1" Content="Schema1" Grid.Column="1" Margin="5,10,5,5" />
-    <CheckBox Name="Schema2" Content="Schema2" Grid.Column="1" Margin="5,30,5,5" />
-    <CheckBox Name="Schema3" Content="Schema3" Grid.Column="1" Margin="5,50,5,5" />
-    <CheckBox Name="Schema4" Content="Schema4" Grid.Column="1" Margin="5,70,5,5" />
+    <CheckBox Name="Schema1" Content="Schema1" Grid.Column="1" Margin="3,10,5,5" />
+    <CheckBox Name="Schema2" Content="Schema2" Grid.Column="1" Margin="3,30,5,5" />
+    <CheckBox Name="Schema3" Content="Schema3" Grid.Column="1" Margin="3,50,5,5" />
+    <CheckBox Name="Schema4" Content="Schema4" Grid.Column="1" Margin="3,70,5,5" />
     <Button Name="StartProcessing" Click="StartButton_Click" Grid.Column="1" Content="Start" Width="100" Height="30" HorizontalAlignment="Center" Padding="0,0,0,0" />
     <Border Grid.Column="2" BorderBrush="Black" BorderThickness="2" Padding="2" Margin="2" >
-      <TextBox Name="TextResult" Grid.Column="2" Height="Auto" AcceptsReturn="True" TextWrapping="Wrap" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch"/>
+      <TextBox Name="TextResult" Grid.Column="2" Height="Auto" AcceptsReturn="True" TextWrapping="Wrap" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" />
     </Border>
   </Grid>
 </Window>
